# tennis-ai-kinematics-simulator

./: .gitignore  TRAINING_GUIDE.md  package-lock.json  package.json
ai_policy/: README.md  pyproject.toml
ai_policy/examples/: sample_rallies.jsonl
ai_policy/tennis_policy/: __init__.py  schemas.py
ai_policy/tennis_policy/data/: __init__.py  action_vocab.py  mcp_code_parser.py  mcp_parser.py  prepare_mcp_dataset.py  sequence_builder.py
ai_policy/tennis_policy/inference/: __init__.py  policy_service.py
ai_policy/tennis_policy/models/: __init__.py  baseline_markov.py  transformer_policy.py
ai_policy/tennis_policy/training/: __init__.py  evaluate_baseline.py  train_baseline.py  train_transformer.py  validation_metrics.py
ai_policy/tests/: __init__.py  test_phase1_policy.py  test_validation_metrics.py
public/: rl_weights.json
rl_training/: buffer.py  config.py  diagnose.py  env_wrapper.py  export_model.py  networks.py  ppo.py  requirements.txt  self_play.py  tennis_env.py  train.py
rl_training/checkpoints/: ckpt_0000001.pt  ckpt_0000002.pt  ckpt_0000003.pt  ckpt_0000004.pt  ckpt_0000005.pt  ckpt_0000006.pt  ckpt_0000007.pt  ckpt_0000008.pt  ckpt_0000009.pt  ckpt_0000010.pt  ckpt_0000011.pt  ckpt_0000012.pt  ckpt_0000013.pt  ckpt_0000014.pt  ckpt_0000015.pt  ckpt_0000016.pt  ckpt_0000017.pt  ckpt_0000018.pt  ckpt_0000019.pt  ckpt_0000020.pt  ckpt_0000021.pt  ckpt_0000022.pt  ckpt_0000023.pt  ckpt_0000024.pt  ckpt_0000025.pt  ckpt_0000026.pt  ckpt_0000027.pt  ckpt_0000028.pt  ckpt_0000029.pt  ckpt_0000030.pt  (+27 more)
src/: App.tsx  index.css  types.ts
(+14 files in other folders)
